# musicai

./: .eslintrc.json  .gitignore  AGENT_SWARM.md  Cargo.toml  Dockerfile.pi  IMPLEMENTATION_RESULTS.md  RASPBERRY_PI_SETUP.md  README.md  docker-compose.pi.yml  index.d.ts  index.js  jest.config.js  musicai.linux-x64-gnu.node  package-lock.json  package.json  tsconfig.json
demo/: benchmark.ts  comprehensive-audio-benchmark.ts  comprehensive-benchmark.ts  full-system-demo.ts  integration-test.ts  mixer-benchmark.ts  real-audio-test.ts
docs/: CLI_GUIDE.md  MIXER_SYSTEM.md  OPTIMIZATION_REPORT.md  QuickStart.md  Requirements.txt  VALIDATION_REPORT.md  specification.md
scripts/: README.md  deploy-to-pi.sh  install-pi.sh  monitor-pi.sh  musicai.service  quick-test-pi.sh
src/: audio.rs  autotune.rs  cli.ts  dsp.rs  index.ts  learning.rs  lib.rs
src/__mocks__/: p-queue.ts
src/agents/: AIEnhancerAgent.ts  ASTAnalyzerAgent.ts  AudienceAgent.ts  AudioAnalyzerAgent.ts  AudioIOAgent.ts  AutotuneEngineAgent.ts  CodeGeneratorAgent.ts  DeploymentAgent.ts  DoctorAgent.ts  IntegrationAgent.ts  LearningManagerAgent.ts  OptimizationAgent.ts  PerformanceMonitorAgent.ts  PitchDetectorAgent.ts  SimulationEngineAgent.ts  StemManagerAgent.ts  TestRunnerAgent.ts  VersionControllerAgent.ts
src/core/: AgentOrchestrator.ts  AutomationEngine.ts  BaseAgent.ts  ChannelStrip.ts  MessageBus.ts  MixerEngine.ts  TaskQueue.ts
src/effects/: EffectProcessors.ts
src/factory/: AgentFactory.ts
src/integrations/: AgentBooster.ts  AgenticJujutsu.ts  AgenticSynth.ts  CoralTPU.ts  Ruvector.ts
(+9 files in other folders)
