[package]
name = "musicai"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["rUv"]
description = "High-performance AI-powered auto-tune and music enhancement system"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
napi = { version = "2", features = ["async"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio processing
rustfft = "6.1"
hound = "3.5"
rubato = "0.15"
dasp = "0.11"

# Performance
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
